# trading

./: .env.example  .gitignore  pyproject.toml
.claude/hooks/: session-start.sh
journal/: README.md  decisions.jsonl  reviews.jsonl
routines/: daily-trading.md  weekly-review.md
src/alpaca_trader/: __init__.py  broker.py  cli.py  config.py  data.py  portfolio.py  reporter.py  research.py  runner.py  strategy.py
tests/: test_cli.py  test_config.py  test_journal.py  test_portfolio.py  test_reporter.py  test_research.py  test_runner.py  test_strategy.py
