[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-trader"
version = "0.1.0"
description = "Paper-trading bot against the Alpaca paper API."
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.30.0",
    "pandas>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
alpaca = "alpaca_trader.cli:main"
alpaca-tick = "alpaca_trader.runner:main"
alpaca-report = "alpaca_trader.runner:report_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
